add spec diff type filter and sort
